# pinball

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SConstruct  version.txt
include/: collisionMap.h  paddle.h  pinball.h  target.h  targetHandler.h
src/: collisionMap.cpp  main.cpp  paddle.cpp  target.cpp  targetHandler.cpp
